# RustRadio

./: README.md
backend/: Cargo.toml  Dockerfile
backend/examples/: gnuradio-sim.yml  test-radio.yml
backend/src/: api.rs  config.rs  container.rs  main.rs  registry.rs  runtime.rs
frontend/: README.md  docker-compose.yml  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  index.tsx
frontend/src/components/Dashboard/: index.tsx
frontend/src/components/Layout/: Sidebar.tsx
frontend/src/contexts/: ThemeContext.tsx
frontend/src/services/: api.ts  containerService.ts
