[package]
name = "rust_radio"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
description = "RustRadio: CI/CD orchestrator SDR léger en Rust"
license = "MIT"

[dependencies]
clap = { version = "4.1", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "1.0"
tokio = { version = "1.28", features = ["full"] }
log = "0.4"
env_logger = "0.10"
uuid = { version = "1.3", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
actix-web = "4"
anyhow = "1.0"

[[bin]]
name = "rust_radio"
path = "src/main.rs"